Bug 327201 - No destination preview for transcoding/moving tracks
Summary: No destination preview for transcoding/moving tracks
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/Organize Files Dialog (other bugs)
Version First Reported In: 2.8-git
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 2.9
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-06 03:25 UTC by bodertz
Modified: 2013-11-13 20:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9
Sentry Crash Report:


Attachments
Organize Files Window (Destination Preview section empty) (98.23 KB, image/png)
2013-11-06 22:06 UTC, bodertz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bodertz 2013-11-06 03:25:06 UTC
The "Destination Preview" section is empty when organizing files with Amarok. Normally, this would show you where Amarok will move a file from and where it will be moved to.

Reproducible: Always

Steps to Reproduce:
1. Right click on song/group of songs in the collection browser and select "Organize Files".
2. Click on "Move" at the top or select a format to transcode to.
3. Tell Amarok how to organize the file/files.
Actual Results:  
No new location is shown.

Expected Results:  
Should show a preview of where the file will be moved.
Comment 1 Myriam Schweingruber 2013-11-06 07:44:30 UTC
It definitely does show a preview for me when it asks for confirmation. Could you please check again?
Comment 2 bodertz 2013-11-06 22:06:22 UTC
Created attachment 83386 [details]
Organize Files Window (Destination Preview section empty)

Is the Destination Preview section not empty for you?
Comment 3 Myriam Schweingruber 2013-11-06 23:32:55 UTC
Yes, it is, but that is so since quite some time IIRC, not sure if this is not a onversight when the code was last worked no, as there is a preview when you click on transcode: a confirmation screen shows up that shows you how it looks.
Comment 4 bodertz 2013-11-09 03:15:23 UTC
I don't know if removing it was deliberate, but I know that it used to show a live preview. It shouldn't show that section if it isn't being used, at the very least.
Comment 5 Myriam Schweingruber 2013-11-09 08:20:20 UTC
Yes, this is indeed a bug.
Comment 6 Matěj Laitl 2013-11-13 20:53:19 UTC
Git commit 36e63e986938c1a3f289c51789a8f35bfc47a15e by Matěj Laitl.
Committed on 13/11/2013 at 17:58.
Pushed by laitl into branch 'master'.

OrganizeCollectionDialog: hide complex options behind a button

In commit 7c780bf5, Ralf addressed bug 283361 by only showing the preview
table when the screen is large enough, which I believe went too far.

This is a bit different approach, the file scheme and other options are
hidden behind the Options button when the dialog is shown, making it much
more cleaner. The rationale is that the user usually sets up the options
once, not every time (and beginner users may be happy with the default
schema right away).
FIXED-IN: 2.9

M  +2    -0    ChangeLog
M  +6    -5    src/dialogs/OrganizeCollectionDialog.cpp
M  +25   -28   src/dialogs/OrganizeCollectionDialogBase.ui

http://commits.kde.org/amarok/36e63e986938c1a3f289c51789a8f35bfc47a15e